--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -1,4 +1,11 @@
 {
   "header.title": "desenvolvedor full stack",
-  "header.message": "desenvolvimento de sites, apps e sistemas para web personalizados e de alta qualidade."
+  "header.message": "desenvolvimento de sites, apps e sistemas para web personalizados e de alta qualidade.",
+  "nav.first.li.element": "sobre mim",
+  "nav.second.li.element": "portfólio",
+  "nav.third.li.element": "depoimentos",
+  "nav.fourth.li.element": "entre em contato",
+  "about.title": "sobre mim",
+  "about.message": "olá, sou o Pedro Siqueira",
+  "about.paragraph": "Formado em Ciência da Computação, possuo mais de 8 anos de experiência trabalhando na área de TI. Recentemente decidi migrar para área de programação ao perceber que meu desejo era trabalhar com desenvolvimento. Durante minha formação como Desenvolvedor Web em um Bootcamp da Ironhack tive a oportunidade de aprofundar meus conhecimentos em linguagens e tecnologias como: Javascript, HTML, CSS, React, NodeJS, Express, MongoDB, Git e SCRUM."
 }
