--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -6,6 +6,6 @@
   "nav.third.li.element": "depoimentos",
   "nav.fourth.li.element": "entre em contato",
   "about.title": "sobre mim",
-  "about.message": "olá, sou o Pedro Siqueira",
+  "about.message": "olá, sou o <span>Pedro Siqueira</span>",
   "about.paragraph": "Formado em Ciência da Computação, possuo mais de 8 anos de experiência trabalhando na área de TI. Recentemente decidi migrar para área de programação ao perceber que meu desejo era trabalhar com desenvolvimento. Durante minha formação como Desenvolvedor Web em um Bootcamp da Ironhack tive a oportunidade de aprofundar meus conhecimentos em linguagens e tecnologias como: Javascript, HTML, CSS, React, NodeJS, Express, MongoDB, Git e SCRUM."
 }
