--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -7,5 +7,17 @@
   "nav.fourth.li.element": "entre em contato",
   "about.title": "sobre mim",
   "about.message": "olá, sou o <span>Pedro Siqueira</span>",
-  "about.paragraph": "Formado em Ciência da Computação, possuo mais de 8 anos de experiência trabalhando na área de TI. Recentemente decidi migrar para área de programação ao perceber que meu desejo era trabalhar com desenvolvimento. Durante minha formação como Desenvolvedor Web em um Bootcamp da Ironhack tive a oportunidade de aprofundar meus conhecimentos em linguagens e tecnologias como: Javascript, HTML, CSS, React, NodeJS, Express, MongoDB, Git e SCRUM."
+  "about.paragraph": "Formado em Ciência da Computação, possuo mais de 8 anos de experiência trabalhando na área de TI. Recentemente decidi migrar para área de programação ao perceber que meu desejo era trabalhar com desenvolvimento. Durante minha formação como Desenvolvedor Web em um Bootcamp da Ironhack tive a oportunidade de aprofundar meus conhecimentos em linguagens e tecnologias como: Javascript, HTML, CSS, React, NodeJS, Express, MongoDB, Git e SCRUM.",
+  "portfolio.title": "portfólio",
+  "portfolio.message": "conheça o meu trabalho",
+  "testimony.title": "depoimentos",
+  "testimony.message": "veja alguns depoimentos",
+  "contact.title": "contato",
+  "contact.message": "quer conversar comigo?",
+  "contact.first.paragraph": "Caso tenha se interessado pelo meu trabalho, preencha o formulário que em breve conversaremos.",
+  "contact.second.paragraph": "Se preferir, pode me enviar um e-mail",
+  "contact.placeholder.name": "Nome",
+  "contact.placeholder.email": "E-mail",
+  "contact.placeholder.message": "Mensagem",
+  "contact.button": "enviar mensagem"
 }
